[package]
name = "timerius"
version = "0.1.1"
edition = "2021"
authors = ["Till Wege"]
description = "A commandline timer tool with native OS notifications."
readme = "readme.md"
keywords = ["commandline", "timer", "time", "notify", "notification"]
categories = ["command-line-utilities"]
repository = "https://github.com/TillWege/Timerius"
homepage = "https://github.com/TillWege/Timerius"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
notify-rust = "4.7.0"
rust-ini = "0.18.0"
